--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@uiw/codemirror-extensions-langs": "^4.19.5",
+    "@uiw/codemirror-theme-vscode": "^4.19.5",
+    "@uiw/react-codemirror": "^4.19.5",
+    "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
